2011-12-13  Revital Eres  <revital.eres@linaro.org>

	* modulo-sched.c (mark_loop_unsched): Free bbs.

2011-12-12  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/51495
	* function.c (thread_prologue_and_epilogue_insns): Don't add
	to bb_tail basic blocks that have EDGE_COMPLEX predecessor edges
	from basic blocks not needing prologue.

	PR tree-optimization/51481
	* gimple-fold.c (gimple_fold_call): Call
	maybe_clean_or_replace_eh_stmt.  Avoid optimization if stmt has EH
	edges, but gimple_fold_builtin result can't throw.

2011-12-12  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/21617
	* ira-color.c (bucket_allocno_compare_func): Don't compare
	allocno classes.  Compare number of hard registers needed.

2011-12-12  Eric Botcazou  <ebotcazou@adacore.com>

	PR tree-optimization/50569
	* tree-sra.c (build_ref_for_model): Replicate a chain of COMPONENT_REFs
	in the expression of MODEL instead of just the last one.

2011-12-12  Dmitry Vyukov  <dvyukov@google.com>

	* cgraphunit.c (init_lowered_empty_function): Fix flags for new edges.

2011-12-12  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/51510
	* calls.c (internal_arg_pointer_based_exp_scan): Don't use
	VEC_safe_grow_cleared if idx is smaller than VEC_length.

2011-12-12  Richard Sandiford  <richard.sandiford@linaro.org>

	PR middle-end/50873
	* optabs.c (maybe_legitimize_operand_same_code): Use copy_to_mode_reg
	instead of force_reg.  Do nothing if the address is already a
	non-virtual pseudo register.

2011-12-12  Torvald Riegel  <triegel@redhat.com>

	* gimplify.c (voidify_wrapper_expr): Add default handling for
	outermost wrapper.

2011-12-12  Torvald Riegel  <triegel@redhat.com>

	* tree-ssa-tail-merge.c (gimple_equal_p): Don't treat transaction
	commits as equal.

2011-12-12  Iain Sandoe  <iains@gcc.gnu.org>

	* config/darwin-sections.def (zobj_const_data_section): Fix over-
	length section name.

2011-12-11  Richard Henderson  <rth@redhat.com>
